// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CoverImage/> should render img, when link does not exist 1`] = `
<div
  class="coverdisplay__gridelement"
>
  <a
    href="/media/1"
  >
    <img
      src="no-image-found.jpg"
    />
  </a>
</div>
`;

exports[`<CoverImage/> should render img, when link exists 1`] = `
<div
  class="coverdisplay__gridelement"
>
  <a
    href="/media/1"
  >
    <img
      src="https://example.com/test.jpg"
    />
  </a>
</div>
`;
